@@ -131,7 +131,7 @@ int main(int argc, char *argv[])
 	GSGLOBAL *gsGlobal;
 
 	/* initialize dmaKit */
-	dmaKit_init(D_CTRL_RELE_OFF,D_CTRL_MFD_OFF, D_CTRL_STS_UNSPEC, D_CTRL_STD_OFF, D_CTRL_RCYC_8);
+	dmaKit_init(D_CTRL_RELE_OFF,D_CTRL_MFD_OFF, D_CTRL_STS_UNSPEC, D_CTRL_STD_OFF, D_CTRL_RCYC_8, 1 << DMA_CHANNEL_GIF);
 
         dmaKit_chan_init(DMA_CHANNEL_GIF);
         dmaKit_chan_init(DMA_CHANNEL_FROMSPR);
